@@ -17,7 +17,7 @@ begin_comment
 comment|/**  * Copyright 2005 The Apache Software Foundation  *  * Licensed under the Apache License, Version 2.0 (the "License");  * you may not use this file except in compliance with the License.  * You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
 end_comment
 begin_comment
-comment|/**  * GreekCharsets class contains encodings schemes (charsets) and toLowerCase() method implementation  * for greek characters in Unicode, ISO-8859-7 and Microsoft Windows CP1253.  *<p>  * Each encoding scheme contains lowercase (positions 0-35) and uppercase (position 36-68) characters,  * including accented ones. One should be able to add other encoding schemes (see RFC 1947) by adding  * the definition of a new charset as well as the required logic in the toLowerCase() method.  *</p>  */
+comment|/**  * GreekCharsets class contains encodings schemes (charsets) and toLowerCase() method implementation  * for greek characters in Unicode, ISO-8859-7 and Microsoft Windows CP1253.  *<p>  * Each encoding scheme contains lowercase (positions 0-35) and uppercase (position 36-68) characters,  * including accented ones. One should be able to add other encoding schemes (see RFC 1947) by adding  * the definition of a new charset as well as the required logic in the toLowerCase() method.  *</p>  * @deprecated Support for non-Unicode encodings will be removed in Lucene 3.0  */
 end_comment
 begin_class
 DECL|class|GreekCharsets
