@@ -78,6 +78,7 @@ name|GreekLowerCaseFilter
 extends|extends
 name|TokenFilter
 block|{
+comment|/**      * @deprecated Support for non-Unicode encodings will be removed in Lucene 3.0      */
 DECL|field|charset
 name|char
 index|[]
@@ -88,6 +89,7 @@ specifier|private
 name|TermAttribute
 name|termAtt
 decl_stmt|;
+comment|/**      * @deprecated Use {@link #GreekLowerCaseFilter(TokenStream)} instead.      */
 DECL|method|GreekLowerCaseFilter
 specifier|public
 name|GreekLowerCaseFilter
@@ -121,6 +123,24 @@ argument_list|(
 name|TermAttribute
 operator|.
 name|class
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|GreekLowerCaseFilter
+specifier|public
+name|GreekLowerCaseFilter
+parameter_list|(
+name|TokenStream
+name|in
+parameter_list|)
+block|{
+name|this
+argument_list|(
+name|in
+argument_list|,
+name|GreekCharsets
+operator|.
+name|UnicodeGreek
 argument_list|)
 expr_stmt|;
 block|}
