@@ -1209,7 +1209,7 @@ operator|new
 name|HashSet
 argument_list|()
 decl_stmt|;
-comment|/**      * Charset for Russian letters.      * Represents encoding for 32 lowercase Russian letters.      * Predefined charsets can be taken from RussianCharSets class      */
+comment|/**      * Charset for Russian letters.      * Represents encoding for 32 lowercase Russian letters.      * Predefined charsets can be taken from RussianCharSets class      * @deprecated Support for non-Unicode encodings will be removed in Lucene 3.0      */
 DECL|field|charset
 specifier|private
 name|char
@@ -1242,7 +1242,7 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
-comment|/**      * Builds an analyzer.      */
+comment|/**      * Builds an analyzer.      * @deprecated Use {@link #RussianAnalyzer()} instead.      */
 DECL|method|RussianAnalyzer
 specifier|public
 name|RussianAnalyzer
@@ -1271,7 +1271,7 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
-comment|/**      * Builds an analyzer with the given stop words.      */
+comment|/**      * Builds an analyzer with the given stop words.      * @deprecated Use {@link #RussianAnalyzer(String[])} instead.      */
 DECL|method|RussianAnalyzer
 specifier|public
 name|RussianAnalyzer
@@ -1301,8 +1301,35 @@ name|stopwords
 argument_list|)
 expr_stmt|;
 block|}
-comment|// Takes russian stop words and translates them to a String array, using
-comment|// the given charset
+comment|/**      * Builds an analyzer with the given stop words.      */
+DECL|method|RussianAnalyzer
+specifier|public
+name|RussianAnalyzer
+parameter_list|(
+name|String
+index|[]
+name|stopwords
+parameter_list|)
+block|{
+name|this
+operator|.
+name|charset
+operator|=
+name|RussianCharsets
+operator|.
+name|UnicodeRussian
+expr_stmt|;
+name|stopSet
+operator|=
+name|StopFilter
+operator|.
+name|makeStopSet
+argument_list|(
+name|stopwords
+argument_list|)
+expr_stmt|;
+block|}
+comment|/** Takes russian stop words and translates them to a String array, using      * the given charset.      * @deprecated Support for non-Unicode encodings will be removed in Lucene 3.0      */
 DECL|method|makeStopWords
 specifier|private
 specifier|static
@@ -1407,7 +1434,7 @@ return|return
 name|res
 return|;
 block|}
-comment|/**      * Builds an analyzer with the given stop words.      * @todo create a Set version of this ctor      */
+comment|/**      * Builds an analyzer with the given stop words.      * @todo create a Set version of this ctor      * @deprecated Use {@link #RussianAnalyzer(Map)} instead.      */
 DECL|method|RussianAnalyzer
 specifier|public
 name|RussianAnalyzer
@@ -1425,6 +1452,33 @@ operator|.
 name|charset
 operator|=
 name|charset
+expr_stmt|;
+name|stopSet
+operator|=
+operator|new
+name|HashSet
+argument_list|(
+name|stopwords
+operator|.
+name|keySet
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**      * Builds an analyzer with the given stop words.      * @todo create a Set version of this ctor      */
+DECL|method|RussianAnalyzer
+specifier|public
+name|RussianAnalyzer
+parameter_list|(
+name|Map
+name|stopwords
+parameter_list|)
+block|{
+name|charset
+operator|=
+name|RussianCharsets
+operator|.
+name|UnicodeRussian
 expr_stmt|;
 name|stopSet
 operator|=
