@@ -17,7 +17,7 @@ begin_comment
 comment|/**  * Licensed to the Apache Software Foundation (ASF) under one or more  * contributor license agreements.  See the NOTICE file distributed with  * this work for additional information regarding copyright ownership.  * The ASF licenses this file to You under the Apache License, Version 2.0  * (the "License"); you may not use this file except in compliance with  * the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
 end_comment
 begin_comment
-comment|/**  * RussianCharsets class contains encodings schemes (charsets) and toLowerCase() method implementation  * for russian characters in Unicode, KOI8 and CP1252.  *<p>  * Each encoding scheme contains lowercase (positions 0-31) and uppercase (position 32-63) characters.  * One should be able to add other encoding schemes (like ISO-8859-5 or customized) by adding a new charset  * and adding logic to toLowerCase() method for that charset.  *</p>  *  * @version $Id$  */
+comment|/**  * RussianCharsets class contains encodings schemes (charsets) and toLowerCase() method implementation  * for russian characters in Unicode, KOI8 and CP1252.  *<p>  * Each encoding scheme contains lowercase (positions 0-31) and uppercase (position 32-63) characters.  * One should be able to add other encoding schemes (like ISO-8859-5 or customized) by adding a new charset  * and adding logic to toLowerCase() method for that charset.  *</p>  * @deprecated Support for non-Unicode encodings will be removed in Lucene 3.0  * @version $Id$  */
 end_comment
 begin_class
 DECL|class|RussianCharsets
